syntax = "proto3";
package member;





/*
List请求
*/
message ListRequest {
    /*
    工作空间ID
    */
    string workspaceId = 1 ;
}

/*
List返回
*/
message ListResponse {
message List {
    /*
    实例ID
    */
    string instanceId = 1 ;
    /*
    用户名
    */
    string name = 2 ;
    /*
    用户昵称
    */
    string nickname = 3 ;
    /*
    email
    */
    string user_email = 4 ;
    /*
    用户电话
    */
    string user_tel = 5 ;
    /*
    工作空间成员身份
    */
    string role = 6 ;
    /*
    用户状态
    */
    string state = 7 ;
}
        
    
    /*
    页数
    */
    int32 page = 1 ;
    /*
    页大小
    */
    int32 page_size = 2 ;
    /*
    总数
    */
    int32 total = 3 ;
    /*
    数据列表
    */
    repeated List list = 4 ;
}

/*
ListApi返回
*/
message ListResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    member.ListResponse data = 4 ;
}

